SENet implementation on ultrasound dataset

--- a/SENet.ipynb
+++ b/SENet.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('E:\\\\Studies\\\\Thesis\\\\Dataset\\\\FETAL_PLANES_ZENODO\\\\LR_merged.csv')\n",
+    "data = pd.read_csv('path_to_csv_file.csv')\n",
     "\n",
     "batch_size = 32"
    ]
@@ -80,7 +80,6 @@
     "        img_path = self.data.iloc[index]['Image_path']\n",
     "        label = self.data.iloc[index]['Plane']\n",
     "\n",
-    "        # Debug print\n",
     "        # print(f\"Index: {index}, Label: {label}\")\n",
     "\n",
     "        label = int(label)  # Convert to integer\n",
